--- a/samples/BinanceWpf/Binance.Wpf/MainWindow.xaml
+++ b/samples/BinanceWpf/Binance.Wpf/MainWindow.xaml
@@ -6,19 +6,36 @@
         xmlns:local="clr-namespace:Binance.Wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <!-- For large content, better go for a Virtualizing StackPanel -->
+        <ItemsPanelTemplate x:Key="ItemsTemplate">
+            <VirtualizingStackPanel/>
+        </ItemsPanelTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="34*"/>
-            <ColumnDefinition Width="33*"/>
-            <ColumnDefinition Width="258*"/>
-            <ColumnDefinition Width="75*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid Name="DataGrid1" Grid.ColumnSpan="4" />
-        <ListView Name="ListView1" Grid.ColumnSpan="4" />
-        <ListBox Name="ListBox1" Grid.ColumnSpan="4" Margin="34,10,-34,-10" >
-            <Button Content="Get Price" Click="Button_Click"/>
-            <Label Content="Le prix" Name="PriceLabel" />
-            <TextBox Name="SymbolTextBox" Text="ETHBTC" TextWrapping="Wrap" Width="120"/>
-        </ListBox>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="28" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="28" />
+        </Grid.RowDefinitions>
+        <GridSplitter HorizontalAlignment="Right" 
+                  VerticalAlignment="Stretch" 
+                  Grid.Column="1" ResizeBehavior="PreviousAndNext"
+                  Width="5" Background="#FFBCBCBC"/>
+        <Button Content="Get Price" Width="200" Click="Button_Click" Grid.Column="0" Grid.Row="0" Name="PriceButton" />
+        <Label Content="Le prix" Name="PriceLabel" Width="300"  Grid.Column="2" Grid.Row="0" />
+        <TextBox Name="SymbolTextBox" Text="ETHBTC" TextWrapping="Wrap" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left"  />
+        <local:FilteredComboBox 
+            x:Name="FilteredComboBox1" 
+            ItemsPanel="{DynamicResource ItemsTemplate}" 
+            Padding="4 3" 
+            MinWidth="200"
+            Grid.Column="2" Grid.Row="1" />
     </Grid>
 </Window>
