--- a/samples/BinanceWpf/Binance.Wpf/MainWindow.xaml
+++ b/samples/BinanceWpf/Binance.Wpf/MainWindow.xaml
@@ -29,9 +29,23 @@
                   Grid.Column="1" ResizeBehavior="PreviousAndNext"
                   Width="5" Background="#FFBCBCBC"/>
         <Button Content="Get Price" Width="200" Click="Button_Click" Grid.Column="0" Grid.Row="0" Name="PriceButton" />
-        <Label Content="Le prix" Name="PriceLabel" Width="300"  Grid.Column="2" Grid.Row="0" />
+        <Grid Grid.Column="2" Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="28" />
+            </Grid.RowDefinitions>
+            
+            <Label Content="Le prix" Name="PriceLabel" Grid.Column="0" Grid.Row="0"   />
+            <Label Name="TimeLabel" Grid.Column="1" Grid.Row="0" Content="Time" />
+            <TextBox Name="AlertPriceTextBlock" Grid.Column="2" Grid.Row="0" Width="300" Text="ENter price alert" HorizontalAlignment="Left" KeyUp="AlertPriceTextBlock_KeyUp" />
+        </Grid>
+
         <local:FilteredComboBox 
-            x:Name="FilteredComboBox1" 
+            x:Name="AllPricesComboBox" 
             ItemsPanel="{DynamicResource ItemsTemplate}" 
             Padding="4 3" 
             MinWidth="200"
