--- a/samples/BinanceWpf/Binance.Wpf/MainWindow.xaml
+++ b/samples/BinanceWpf/Binance.Wpf/MainWindow.xaml
@@ -24,10 +24,13 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="28" />
         </Grid.RowDefinitions>
-        <GridSplitter HorizontalAlignment="Right" 
-                  VerticalAlignment="Stretch" 
-                  Grid.Column="1" ResizeBehavior="PreviousAndNext"
-                  Width="5" Background="#FFBCBCBC"/>
+        <GridSplitter 
+            HorizontalAlignment="Right" 
+            VerticalAlignment="Stretch" 
+            Grid.Column="1" 
+            ResizeBehavior="PreviousAndNext"
+            Width="5" 
+            Background="#FFBCBCBC"/>
         <Button Content="Get Price" Width="200" Click="Button_Click" Grid.Column="0" Grid.Row="0" Name="PriceButton" />
         <Grid Grid.Column="2" Grid.Row="0">
             <Grid.ColumnDefinitions>
@@ -49,6 +52,14 @@
             ItemsPanel="{DynamicResource ItemsTemplate}" 
             Padding="4 3" 
             MinWidth="200"
-            Grid.Column="2" Grid.Row="1" />
+            Grid.Column="2" 
+            Grid.Row="1" />
+
+        <DockPanel VerticalAlignment="Center" Margin="10"
+            Grid.Column="0" 
+            Grid.Row="1">
+            <TextBox Text="{Binding ElementName=slValue, Path=Value, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" TextAlignment="Right" Width="40" />
+            <Slider Maximum="99" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True" Name="slValue" />
+        </DockPanel>
     </Grid>
 </Window>
